fixed header / missing the scrollbar messing with the screen width

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   body {
     @apply bg-brand-secondary text-brand-primary font-sans;
     -webkit-font-smoothing: antialiased;
+    scrollbar-gutter: stable;
   }
 
   h1,
